--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -26,7 +26,7 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -53,144 +53,46 @@
 </header>
 
 <section class="contestBox">
+
     <div class="container">
+
         <div class="row">
+
             <div class="col-lg-6 col-md-6 col-xs-12">
+
                 <h2>Colorful like a rainbow</h2>
 
                 <figure>
-                    <img class="img-responsive center-block" src="../img/IMG_5087.JPG" width="569" height="379">
+                    <img class="img-responsive center-block" src="../img/IMG_5087.JPG" >
 
                 </figure>
             </div>
 
-            <div class="col-lg-6 col-md-6 col-xs-12">
+
+            <div class="col-lg-6 col-md-6 col-xs-12 contestVerticalBox">
                 <article>
 
-                    <h3>Taste the rainbow</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor
-                        invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                        rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        Lorem ipsum
-                        dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                        labore et dolore
-                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                        rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    </p>
-                    <div class="text-center">
-                        <button type="button" class="btn" data-toggle="modal"
-                                data-target="#uploadModal">Upload
-                        </button>
-                    </div>
-
-                    <!-- Modal -->
-                    <div id="uploadModal" class="modal fade" role="dialog">
-                        <div class="modal-dialog modal-lg modal-sm">
-
-                            <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Upload</h4>
-                                </div>
-
-                                <div class="modal-body">
-                                    <form>
-                                        <div class="form-group">
-                                            <label for="brandSelect">Brand</label>
-                                            <select class="form-control" id="brandSelect">
-                                                <option>Nike</option>
-                                                <option>Adidas</option>
-                                                <option>Puma</option>
-                                                <option>Asics</option>
-                                                <option>Reebok</option>
-                                                <option>Saucony</option>
-                                                <option>Other</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="colorSelect">Color</label>
-                                            <select class="form-control" id="colorSelect">
-                                                <option>Black</option>
-                                                <option>White</option>
-                                                <option>Red</option>
-                                                <option>Yellow</option>
-                                                <option>Orange</option>
-                                                <option>Brown</option>
-                                                <option>Other</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="styleSelect">Style</label>
-                                            <select class="form-control" id="styleSelect">
-                                                <option>Running</option>
-                                                <option>Basketball</option>
-                                                <option>Tennis</option>
-                                                <option>Other</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="materialSelect">Style</label>
-                                            <select class="form-control" id="materialSelect">
-                                                <option>Running</option>
-                                                <option>Basketball</option>
-                                                <option>Tennis</option>
-                                                <option>Other</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="shapeSelect">Style</label>
-                                            <select class="form-control" id="shapeSelect">
-                                                <option>this</option>
-                                                <option>that</option>
-                                                <option>Other</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="yearSelect">Style</label>
-                                            <select class="form-control" id="yearSelect">
-                                                <option>2016</option>
-                                                <option>2015</option>
-                                                <option>2014</option>
-                                                <option>2013</option>
-                                                <option>2012</option>
-                                                <option>2014</option>
-                                                <option>2014</option>
+                        <h3>Taste the rainbow</h3>
 
 
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="descriptionTextarea">Description</label>
-                                            <textarea class="form-control" id="descriptionTextarea"
-                                                      rows="3"></textarea>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputFile">File input</label>
-                                            <input type="file" class="form-control-file" id="exampleInputFile">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close
-                                        </button>
-                                    </form>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                            tempor
+                            invidunt ut labore
+                            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                            dolores et ea
+                            rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                            Lorem ipsum
+                            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                            labore et dolore
+                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                            rebum. Stet
+                            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                        </p>
 
-
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
                 </article>
             </div>
         </div>
     </div>
-
-
 </section>
 
 
@@ -343,7 +245,7 @@
 <section>
     <div class="container">
 
-        <div class="row rowBox" >
+        <div class="row rowBox">
 
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
                 <a href="viewPicByClick.html">
@@ -406,7 +308,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
-                <a  href="viewPicByClick.html">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
@@ -471,7 +373,6 @@
         </div>
     </div>
 </section>
-
 
 
 <section>
@@ -490,8 +391,6 @@
 
 
 <footer class="footer-bottom">
-
-
 
 
     <div class="navbar navbar-default nav-links navbar-static-bottom">
