--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -12,9 +12,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+    
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+
+
+    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
 
 
     <title>snkrGllry - Home</title>
