--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -16,9 +16,11 @@
 
     <title>snkrGllry - Home</title>
 
-    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+
+
+    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
 
 
 </head>
@@ -58,13 +60,13 @@
 <section class="PicByClickBox">
     <div class="container">
         <div class="row">
-            <div class="row-centered col-xs-12">
+            <div class="row-centered col-xs-12 col-sm-6">
                 <figure>
                     <img class="img-responsive" src="../img/IMG_5109.jpg" height="1050" width="700">
                 </figure>
                 <div class="likeAndCommentBox">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
+
                     <p>123 Likes</p>
                 </div>
             </div>
@@ -87,7 +89,7 @@
                 <span id="description">Lorem ipsum</span>
             </div>
 
-            <div class="col-xs-12 col-lg-9">
+            <div class="col-xs-12 col-sm-6">
                 <form>
 
                     <div class="form-group">
