--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -104,6 +104,7 @@
                     More Filter
                 </button>
 
+
             </div>
             <div class="collapse navbar-collapse" id="filterNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -157,36 +158,45 @@
                                                     <option>Running</option>
                                                     <option>Basketball</option>
                                                     <option>Tennis</option>
-                                                    <option>Other</option>
+                                                    <option>Retro</option>
+                                                    <option>Collap</option>
+                                                    <option>Vintage</option>
+                                                    <option>Skateboarding</option>
+                                                    <option>Fairtrade</option>
+                                                    <option>Vegan</option>
                                                 </select>
                                             </div>
                                             <div class="form-group">
-                                                <label for="materialSelect">Style</label>
+                                                <label for="materialSelect">Material</label>
                                                 <select class="form-control" id="materialSelect">
-                                                    <option>Running</option>
-                                                    <option>Basketball</option>
-                                                    <option>Tennis</option>
+                                                    <option>Suede</option>
+                                                    <option>Mesh</option>
+                                                    <option>Leather</option>
+                                                    <option>Synthetic</option>
+                                                    <option>Linen/Canvas</option>
+                                                    <option>Knit</option>
                                                     <option>Other</option>
                                                 </select>
                                             </div>
                                             <div class="form-group">
-                                                <label for="shapeSelect">Style</label>
+                                                <label for="shapeSelect">Shape</label>
                                                 <select class="form-control" id="shapeSelect">
-                                                    <option>this</option>
-                                                    <option>that</option>
+                                                    <option>low</option>
+                                                    <option>mid</option>
+                                                    <option>high</option>
                                                     <option>Other</option>
                                                 </select>
                                             </div>
                                             <div class="form-group">
-                                                <label for="yearSelect">Style</label>
+                                                <label for="yearSelect">Year</label>
                                                 <select class="form-control" id="yearSelect">
                                                     <option>2016</option>
                                                     <option>2015</option>
                                                     <option>2014</option>
                                                     <option>2013</option>
                                                     <option>2012</option>
-                                                    <option>2014</option>
-                                                    <option>2014</option>
+                                                    <option>2011</option>
+                                                    <option>2010</option>
 
 
                                                 </select>
@@ -200,9 +210,13 @@
                                                 <label for="exampleInputFile">File input</label>
                                                 <input type="file" class="form-control-file" id="exampleInputFile">
                                             </div>
-                                            <button type="submit" class="btn btn-primary">Submit</button>
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close
+
+                                            <button type="submit" class="btn">Submit</button>
+
+
+                                            <button type="button" class="btn" data-dismiss="modal">Close
                                             </button>
+
                                         </form>
 
 
@@ -212,21 +226,45 @@
                             </div>
                         </div>
                     </li>
-                    <li><a href="#brand">Brand</a></li>
-                    <li><a href="#model">Model</a></li>
-                    <li><a href="#color">Color</a></li>
+
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#brand">Brand
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Adidas</a></li>
+                            <li><a href="#">Nike</a></li>
+                            <li><a href="#">Asics</a></li>
+                            <li><a href="#">Reebok</a></li>
+                            <li><a href="#">Jordan</a></li>
+                            <li><a href="#">Puma</a></li>
+                            <li><a href="#">New Balance</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Model
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Ultra Boost</a></li>
+                            <li><a href="#">Reebok Classic x Solebox Club C85</a></li>
+                            <li><a href="#">Nike Air Hyperadapt</a></li>
+                            <li><a href="#">Adidas Gazelle</a></li>
+                            <li><a href="#">Nike Free Flyknit</a></li>
+                        </ul>
+                    </li>
+
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Date ascending</a></li>
-                            <li><a href="#">Date descending</a></li>
-                            <li><a href="#">Likes ascending</a></li>
-                            <li><a href="#">Likes descending</a></li>
+                            <li><a href="#">Year</a></li>
+                            <li><a href="#">Styles</a></li>
+                            <li><a href="#">Materials</a></li>
+                            <li><a href="#">Shape</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Order By
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Order by
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Date ascending</a></li>
@@ -235,6 +273,7 @@
                             <li><a href="#">Likes descending</a></li>
                         </ul>
                     </li>
+
                 </ul>
             </div>
         </div>
