--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -58,9 +58,9 @@
 <section class="PicByClickBox">
     <div class="container">
         <div class="row">
-            <div class="row-centered col-xs-12">
+            <div class="col-xs-12">
                 <figure>
-                    <img class="img-responsive" src="../img/IMG_5109.jpg" height="1050" width="700">
+                    <img class="img-responsive center-block " src="../img/IMG_5109.jpg" height="750" width="500">
                 </figure>
                 <div class="likeAndCommentBox">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
