--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -60,11 +60,11 @@
 <section class="PicByClickBox">
     <div class="container">
         <div class="row">
-<<<<<<< HEAD
-            <div class="col-xs-12">
-=======
+
+
+
             <div class="row-centered col-xs-12 col-sm-6">
->>>>>>> origin/1.0
+
                 <figure>
                     <img class="img-responsive center-block " src="../img/IMG_5109.jpg" height="750" width="500">
                 </figure>
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="col-xs-12 col-lg-3">
+            <div class="col-xs-12 col-sm-6">
 
                 <label for="username">Username: </label>
                 <span id="username">MaxMuster</span><br>
@@ -108,7 +108,7 @@
                 </form>
             </div>
 
-        </div>
+        </di>
     </div>
 </section>
 
