--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -21,6 +21,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
 
 
 </head>
@@ -30,7 +31,7 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -104,7 +105,6 @@
                     <button type="submit" class="btn btn-primary">Post</button>
 
 
-
                 </form>
             </div>
 
@@ -116,17 +116,16 @@
 <footer class="footer-bottom">
 
 
-
-
-    <div class="navbar navbar-default nav-links navbar-static-bottom">
-        <div id="footer-bottom" class="container">
-            <ul class="nav navbar-nav footer-nav">
+    <div  id="test" class="navbar navbar-default nav-links ">
+        <div class="container">
+            <ul  class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
 
             </ul>
         </div>
     </div>
+
 
 
 </footer>
