--- a/HTML/login.html
+++ b/HTML/login.html
@@ -65,16 +65,16 @@
             <div class="loginBox">
                 <form>
                     <h2>Login</h2>
-                    <div class="form-group col-lg-5 col-md-6 col-xs-12">
+                    <div class="form-group col-lg-6 col-md-6 col-xs-12">
                         <label for="loginUsername">Username</label>
                         <input type="text" class="form-control" id="loginUsername" placeholder="Enter Username">
                     </div>
 
-                    <div class="form-group col-lg-5 col-md-6 col-xs-12">
+                    <div class="form-group col-lg-6 col-md-6 col-xs-12">
                         <label for="loginPassword">Password</label>
                         <input type="password" class="form-control" id="loginPassword" placeholder="Password">
                     </div>
-                    <div class=" col-lg-2 col-xs-12 loginButtonBox">
+                    <div class=" col-xs-12 loginButtonBox">
                         <a href="index.html" class="btn " role="button">Login</a>
                     </div>
                 </form>
@@ -118,7 +118,7 @@
 
 
 
-    <div class="navbar navbar-default nav-links navbar-static-bottom">
+    <div class="navbar navbar-default nav-links navbar-fixed-bottom">
         <div id="footer-bottom" class="container">
             <ul class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
