--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Logo</a>
+
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +50,7 @@
         </div>
     </nav>
     <div id="caption">
-        <h1>snkrGllry</h1>
+                <h1>snkrGllry</h1>
     </div>
 </header>
 
@@ -69,14 +69,15 @@
             </div>
 
 
-            <div class="col-xs-12 col-sm-2">
+            <div class="col-xs-12 col-sm-3">
                 <figure>
                     <img class="image-responsive" src="../img/profilPic.jpg" height="130" width="130"/>
 
                 </figure>
             </div>
 
-            <div class="col-xs-12 col-sm-10">
+            <div class="col-xs-12 col-sm-9">
+
                 <label for="username">Username: </label>
                 <span id="username">laaaarsi</span><br>
 
@@ -91,6 +92,7 @@
 
                 <label for="likes">Total likes: </label>
                 <span id="likes">1000</span>
+
             </div>
 
 
@@ -98,7 +100,8 @@
                 <div class="col-xs-12">
                     <h2>About me</h2>
 
-                    <p>Hi my name is Lars and I'm one of the creators of this website and a sneaker-enthusiast since 2013.</p>
+                    <p>Hi my name is Lars and I'm one of the creators of this website and a sneaker-enthusiast since
+                        2013.</p>
                 </div>
             </article>
 
