--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -63,7 +63,7 @@
                 <h2>Colorful like a rainbow</h2>
 
                 <figure>
-                    <img class="img-responsive center-block" src="../img/IMG_5087.JPG" >
+                    <img class="img-responsive center-block" src="../img/IMG_5087.JPG">
 
                 </figure>
             </div>
@@ -72,22 +72,15 @@
             <div class="col-lg-6 col-md-6 col-xs-12 contestVerticalBox">
                 <article>
 
-                        <h3>Taste the rainbow</h3>
+                    <h3>Join our Competition!</h3>
 
 
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                            tempor
-                            invidunt ut labore
-                            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                            dolores et ea
-                            rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                            Lorem ipsum
-                            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                            labore et dolore
-                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                            rebum. Stet
-                            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        </p>
+                    <p>
+                        You only need to upload your best photo and you can be the lucky winner.
+                    </p>
+                    <p>
+                        Take a snaphot that you are proud of
+                    </p>
 
                 </article>
             </div>
