--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -79,7 +79,8 @@
                         You only need to upload your best photo and you can be the lucky winner.
                     </p>
                     <p>
-                        Take a snaphot that you are proud of
+                        You do not have to be the best. Only better than the others.
+                        Compete your skills with other photgraphers.
                     </p>
 
                 </article>
