--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Logo</a>
+
+                <a class="navbar-brand"> <img src="../img/aperture.png" height="40" width="40"/></a>
 
 
             </div>
@@ -57,6 +58,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
+        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
     </div>
 </header>
 
