--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -33,7 +33,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Logo</a>
+
+                <a class="navbar-brand" href="index.html"> <img src="../img/aperture.png" height="40" width="40"/></a>
+
+
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -49,6 +52,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
+        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
     </div>
 </header>
 
