--- a/HTML/index.html
+++ b/HTML/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand"> <img src="../img/aperture.png" height="40" width="40"/></a>
+                <a class="navbar-brand" href="index.html"> <img src="../img/aperture.png" height="40" width="40"/></a>
 
 
             </div>
