--- a/HTML/login.html
+++ b/HTML/login.html
@@ -31,14 +31,17 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Logo</a>
+
+                <a class="navbar-brand" href="index.html"> <img src="../img/aperture.png" height="40" width="40"/></a>
+
+
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -54,6 +57,7 @@
     </nav>
     <div id="caption">
         <h1>snkrGllry</h1>
+        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
     </div>
 </header>
 
