--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -36,6 +36,9 @@
                     <span class="icon-bar"></span>
                 </button>
 
+                <a class="navbar-brand" href="index.html"> <img src="../img/aperture.png" height="40" width="40"/></a>
+
+
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +53,8 @@
         </div>
     </nav>
     <div id="caption">
-                <h1>snkrGllry</h1>
+        <h1>snkrGllry</h1>
+        <p id="littleHeading" style="text-align: center">The best on Feet on the Web!</p>
     </div>
 </header>
 
