--- a/HTML/impressum.html
+++ b/HTML/impressum.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
-    <title>snkrGllry - Home</title>
+    <title>snkrGllry - Impressum</title>
 
 
 </head>
@@ -103,9 +103,6 @@
 
 <footer class="footer-bottom">
 
-
-
-
     <div class="navbar navbar-default nav-links navbar-static-bottom">
         <div id="footer-bottom" class="container">
             <ul class="nav navbar-nav footer-nav">
@@ -123,4 +120,3 @@
 </body>
 
 
-</body>
