--- a/HTML/login.html
+++ b/HTML/login.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
 
 
-    <title>snkrGllry</title>
+    <title>snkrGllry - Login</title>
 
 
 </head>
