--- a/HTML/news.html
+++ b/HTML/news.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
-    <title>snkrGllry</title>
+    <title>snkrGllry - News</title>
 
 
 </head>
@@ -220,7 +220,7 @@
 
         </div>
     </div>
-    </div>
+
 
 </section>
 
