--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>snkrGllry - Home</title>
+    <title>snkrGllry</title>
 
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
@@ -108,7 +108,7 @@
                 </form>
             </div>
 
-        </di>
+        </div>
     </div>
 </section>
 
