--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
 
 
-    <title>snkrGllry - Home</title>
+    <title>snkrGllry - Contact</title>
 
 
 </head>
