--- a/HTML/contest.html
+++ b/HTML/contest.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
-    <title>snkrGllry</title>
+    <title>snkrGllry - Contest</title>
 
 
 </head>
