--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
 
-    <title>snkrGllry</title>
+    <title>snkrGllry - laaaarsi</title>
 
 
 </head>
