--- a/HTML/test.html
+++ b/HTML/test.html
@@ -40,7 +40,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img  class="img-responsive"src="../img/carousel1.jpg" alt="First slide">
+                        <img class="img-responsive" src="../img/carousel1.jpg" alt="First slide">
                     </div>
                     <div class="item">
                         <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
@@ -53,7 +53,9 @@
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
-                                                                                 href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
+                                                                                 href="#carousel-example-generic"
+                                                                                 data-slide="next"><span
+                    class="glyphicon glyphicon-chevron-right">
                         </span></a>
             </div>
 
@@ -61,5 +63,6 @@
     </div>
 
 
+</div>
 </body>
 </html>
