--- a/HTML/upload.html
+++ b/HTML/upload.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-    <title>snkrGllry</title>
+    <title>snkrGllry - Upload</title>
 
 
 </head>
